Show ip in lobby

--- a/html/lobby.html
+++ b/html/lobby.html
@@ -8,6 +8,13 @@
     <div id="loadingScreen" class="loading-screen">
         <p>Loading...</p>
     </div>
+    <div class="ip-container">
+        <h1>Join the game</h1>
+        <div class="address-line">
+            <h2 id="ipAddress" class="ip-address">localhost:3000</h2>
+            <img src="../images/icons/unhide.png" id="hideButton" class="hide-button"></img>
+        </div> 
+    </div>
     <div id="playerList" class="player-list"></div>
     <div class="player-count" id="playerCount">0/4 players</div>
     <script src="../js/lobby.js"></script>
