Added README.md and necessary images

--- a/html/lobby.html
+++ b/html/lobby.html
@@ -12,7 +12,7 @@
         <h1>Join the game</h1>
         <div class="address-line">
             <h2 id="ipAddress" class="ip-address">localhost:3000</h2>
-            <img src="../images/icons/unhide.png" id="hideButton" class="hide-button"></img>
+            <h2 id="hideButton" class="hide-button">Show</h2>
         </div> 
     </div>
     <div id="playerList" class="player-list"></div>
