Added title screen

--- a/html/lobby.html
+++ b/html/lobby.html
@@ -15,6 +15,7 @@
             <h2 id="hideButton" class="hide-button">Show</h2>
         </div> 
     </div>
+    <button id="backButton" class="back-button">Back to Title</button>
     <div id="playerList" class="player-list"></div>
     <div class="player-count" id="playerCount">0/4 players</div>
     <script src="../js/lobby.js"></script>
