--- a/html/lobby.html
+++ b/html/lobby.html
@@ -12,7 +12,7 @@
         <h1>Join the game</h1>
         <div class="address-line">
             <h2 id="ipAddress" class="ip-address">localhost:3000</h2>
-            <h2 id="hideButton" class="hide-button">Show</h2>
+            <button id="hideButton" class="hide-button">Show</button>
         </div> 
     </div>
     <button id="backButton" class="back-button">Back to Title</button>
