added board selection to lobby

--- a/html/board.html
+++ b/html/board.html
@@ -8,6 +8,13 @@
     <div id="loadingScreen" class="loading-screen">
         <p>Loading...</p>
     </div>
+    <div id="backToTitleWindow" class="back-to-title-window">
+        <p>Go back to title screen?</p>
+        <div class="button-container">
+            <button id="confirmTitleButton" class="confirm-title-button">Yes</button>
+            <button id="cancelTitleButton" class="cancel-title-button">No</button>
+        </div>
+    </div>
     <div class="top-bar" id="topBar"></div>
     <div class="board"></div>
     <script src="../js/board.js"></script>
