--- a/html/lobby.html
+++ b/html/lobby.html
@@ -15,6 +15,10 @@
             <button id="hideButton" class="hide-button">Show</button>
         </div> 
     </div>
+    <div class="dropdown">
+        <button class="dropdown-button" id="dropdownButton">Selected board: none</button>
+        <div class="dropdown-menu" id="dropdownMenu"></div>
+    </div>
     <button id="backButton" class="back-button">Back to Title</button>
     <div id="playerList" class="player-list"></div>
     <div class="player-count" id="playerCount">0/4 players</div>
