Board visual rework, WIP
Fixed lamps
Added sidebars to board
Questions now get completely removed from the board after answering instead of just removing the price text
Started working on colors

--- a/html/board.html
+++ b/html/board.html
@@ -16,7 +16,11 @@
         </div>
     </div>
     <div class="top-bar" id="topBar"></div>
-    <div class="board"></div>
+    <div class="board-container">
+        <div class="sidebar-left"> </div>
+        <div class="board"></div>
+        <div class="sidebar-right"> </div>
+    </div>
     <script src="../js/board.js"></script>
 </body>
 </html>
