--- a/html/board.html
+++ b/html/board.html
@@ -17,9 +17,9 @@
     </div>
     <div class="top-bar" id="topBar"></div>
     <div class="board-container">
-        <div class="sidebar-left"> </div>
+        <div class="sidebar-left" id="sidebarLeft"> </div>
         <div class="board"></div>
-        <div class="sidebar-right"> </div>
+        <div class="sidebar-right" id="sidebarRight"> </div>
     </div>
     <script src="../js/board.js"></script>
 </body>
