--- a/html/board.html
+++ b/html/board.html
@@ -11,8 +11,20 @@
     <div id="backToTitleWindow" class="back-to-title-window">
         <p>Go back to title screen?</p>
         <div class="button-container">
-            <button id="confirmTitleButton" class="confirm-title-button">Yes</button>
-            <button id="cancelTitleButton" class="cancel-title-button">No</button>
+            <button id="confirmTitleButton" class="confirm-title-button">
+                <svg>
+                    <text x="5vw" y="50%" text-anchor="middle" class="svg-text">
+                        Yes
+                    </text>
+                </svg>
+            </button>
+            <button id="cancelTitleButton" class="cancel-title-button">
+                <svg>
+                    <text x="5vw" y="50%" text-anchor="middle" class="svg-text">
+                        No
+                    </text>
+                </svg>
+            </button>
         </div>
     </div>
     <div class="top-bar" id="topBar"></div>
