language selection and controls without host for debugging

--- a/html/lobby.html
+++ b/html/lobby.html
@@ -9,7 +9,7 @@
         <p>Loading...</p>
     </div>
     <div class="ip-container">
-        <h1>Join the game</h1>
+        <h1 id="joinGameText">Join the game</h1>
         <div class="address-line">
             <h2 id="ipAddress" class="ip-address">localhost:3000</h2>
             <button id="hideButton" class="hide-button">Show</button>
@@ -24,7 +24,7 @@
     <div class="player-count">
         <svg>
             <text x="50%" y="70%" text-anchor="middle" class="svg-text">
-                <tspan id="playerCount">0</tspan><tspan class="slash">/</tspan>4 Players
+                <tspan id="playerCount">0</tspan><tspan class="slash">/</tspan><tspan id="playerCountEnding">4 Players</tspan>
             </text>
         </svg>
     </div>
