--- a/html/playerIndex.html
+++ b/html/playerIndex.html
@@ -8,6 +8,9 @@
     <div id="loadingScreen" class="loading-screen">
         <p>Loading...</p>
     </div>
+    <div class="language-container">
+        <img src="../images/icons/flag_en.png" class="flag" id="languageButton">
+    </div>
     <img src="../images/default_player.png" alt="Player Picture" class="player-picture" id="playerPicture">
     <input type="text" id="playerName" class="player-name" placeholder="Enter your name" maxlength="10">
     <button id="joinGameButton" class="join-game-button">Join Game</button>
