--- a/html/title.html
+++ b/html/title.html
@@ -12,5 +12,8 @@
     <button class="options-button" id="optionsButton">Options</button>
     <button class="exit-button" id="exitButton">Exit Game</button>
 
+    <div class="language-container">
+        <img src="../images/icons/flag_en.png" class="flag" id="languageButton">
+    </div>
 </body>
 </html>
