--- a/html/playerBuzzer.html
+++ b/html/playerBuzzer.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../css/playerBuzzer.css">
 </head>
 <body>
-    <button id="buzzer" class="buzzer-button">Atsakyti!</button>
+    <button id="buzzer" class="buzzer-button">Buzz In!</button>
     <div class="player-card">
         <img src="images/default_player.png" alt="Player Picture" class="player-picture" id="playerPicture">
         <div class="player-info">
