--- a/html/boardList.html
+++ b/html/boardList.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>PurpJeopardy Board Editor</title>
-    <link rel="stylesheet" type="text/css" href="../css/boardEditorList.css">
-    <script src="../js/boardEditorList.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/boardList.css">
+    <script src="../js/boardList.js"></script>
 </head>
 <body>
     <div class="top-bar" id="topBar">
