--- a/html/board.html
+++ b/html/board.html
@@ -9,7 +9,7 @@
         <p>Loading...</p>
     </div>
     <div id="backToTitleWindow" class="back-to-title-window">
-        <p>Go back to title screen?</p>
+        <p id="backToTitleText">Go back to title screen?</p>
         <div class="button-container">
             <button id="confirmTitleButton" class="confirm-title-button">
                 <svg>
