Full Lithuanian character support, new fonts, deleting board bug fix

--- a/html/title.html
+++ b/html/title.html
@@ -3,6 +3,7 @@
 <head>
     <title>PurpJeopardy</title>
     <link rel="stylesheet" type="text/css" href="../css/title.css">
+    <meta charset="UTF-8">
     <script src="../js/title.js"></script>
 </head>
 <body>
