Download image in editor

--- a/html/boardEditor.html
+++ b/html/boardEditor.html
@@ -31,9 +31,15 @@
         </div>
         <div class="row">
             <img class="question-image image-input" id="questionImage" src="../images/add_picture.png" alt="Question image">
-            <img class="remove-image-button" id="removeQuestionImageButton" src="../images/icons/kick.png" alt="X">
+            <div class="image-button-container">
+                <img class="remove-image-button" id="removeQuestionImageButton" src="../images/icons/trash.png" alt="X">
+                <img class="download-image-button" id="downloadQuestionImageButton" src="../images/icons/download.png" alt="Save">
+            </div>
             <img class="answer-image image-input" id="answerImage" src="../images/add_picture.png" alt="Answer image">
-            <img class="remove-image-button" id="removeAnswerImageButton" src="../images/icons/kick.png" alt="X">
+            <div class="image-button-container">
+                <img class="remove-image-button" id="removeAnswerImageButton" src="../images/icons/trash.png" alt="X">
+                <img class="download-image-button" id="downloadAnswerImageButton" src="../images/icons/download.png" alt="Save">
+            </div>
         </div>
     </div>
     <div class="save-board-window" id="saveBoardWindow">
